--- a/site/assets/css/styles.css
+++ b/site/assets/css/styles.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+}
+
 #main {
   margin: 0 auto;
   max-width: 90%;
@@ -120,4 +126,15 @@ th.desc::after {
 .reset-btn {
   background-color: #f44336;
   color: white;
+}
+
+footer {
+  background-color: #333;
+  color: white;
+  padding-top: 10px;
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 90%;
+  /* margin: 0 auto; */
 }
