--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -7,15 +7,15 @@
   --text-color: #000000;
   --footer-bg-color: #121212;
   --footer-color: #ffffff;
-  --area-color: #272B35;
+  --area-color: #272b35;
   --code-color: #f5f5f5;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background-color: #1D2129;
+    --background-color: #1d2129;
     --text-color: #ffffff;
-    --code-color: #272B35;
+    --code-color: #272b35;
   }
 }
 
@@ -47,8 +47,10 @@ header h1 {
   display: inline;
 }
 
-header svg {
-  height: 32px;
+header svg,
+header img {
+  height: 48px;
+  margin-right: 10px;
 }
 
 footer {
@@ -99,15 +101,15 @@ button {
   margin: 0 5px;
 }
 
-input[type="checkbox"]+label,
-input[type="radio"]+label {
+input[type="checkbox"] + label,
+input[type="radio"] + label {
   width: auto;
   text-align: left;
   margin: 0 5px;
 }
 
-input[type="checkbox"]:checked+label::before,
-input[type="radio"]:checked+label::before {
+input[type="checkbox"]:checked + label::before,
+input[type="radio"]:checked + label::before {
   border-color: var(--primary-color);
   background-color: var(--primary-color);
   border-radius: 3px;
@@ -203,7 +205,7 @@ input[type="text"]:hover {
 }
 
 #search-area {
-  border: 2px solid var(--primary-color);  
+  border: 2px solid var(--primary-color);
   padding: 20px;
   width: 80%;
   box-sizing: border-box;
