--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -165,6 +165,11 @@ input[type="text"]:hover {
   background-color: var(--code-color);
 }
 
+td a img {
+  width: 13px;
+  margin-right: 5px;
+}
+
 .upload-btn {
   background-color: var(--more-color);
   color: white;
